<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_check_check"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_check_check" />
        <item
            android:id="@+id/nav_spot_check"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_spot_check" />
        <item
            android:id="@+id/nav_self_check"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_self_check" />
        <item
            android:id="@+id/nav_check_correction"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_check_correction" />
        <item
            android:id="@+id/nav_spot_correction"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_spot_correction" />
        <item
            android:id="@+id/nav_self_correction"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_self_correction" />
    </group>

</menu>
